# PatientRecord_pallet

./: Cargo.toml  customSpec.json  customSpecRaw.json
pallets/Patient_Record/: Cargo.toml
pallets/Patient_Record/src/: l.rs  lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
